# buddy

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  test_live.py
.github/workflows/: ci.yml
buddy/: config.py  main.py
buddy/api/: admin.py  alerts.py  chat.py  demo.py  forest.py  memory.py  siri.py  tasks.py
buddy/demo/: refuse_harmful.yaml
buddy/llm/: agent.py  mlx_backend.py  prompts.py  router.py
buddy/memory/: db.py  store.py  vectors.py
buddy/tools/: filesystem.py  plugin_loader.py  shell.py  tool_registry.py
buddy/ui/static/: app.js  style.css
buddy/ui/templates/: index.html
docs/: ARCHITECTURE.md
docs/demos/: DEMO.md
docs/install/: INSTALL.md
docs/sessions/: 2026-04-19_journal.md  2026-04-20_agenda.md  AGENDA_TEMPLATE.md  JOURNAL_TEMPLATE.md
plugins/: datetime_plugin.py  sysinfo_plugin.py
scripts/: buddy-start.sh  demo.sh  seed_demo.py  setup.sh  start_mlx_server.sh
shortcuts/: README.md
tests/: test_agent.py  test_filesystem_extended.py  test_integration.py  test_memory.py  test_tools.py
