[project]
name = "buddy"
version = "0.1.0"
description = "Local-first interactive desktop assistant — Qwen2.5:14b + Claude Haiku escalation"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "StellarRequiem" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "anthropic>=0.40",
    "ollama>=0.4",
    "chromadb>=0.5",
    "cus-core @ file:///Users/llm01/Projects/cus-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["buddy"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
