[project]
name = "buddy"
version = "0.3.0"
description = "Local-first agentic AI assistant — 25-tool native function-calling, Forest security integration, cus-core grading"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "StellarRequiem" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "anthropic>=0.40",
    "ollama>=0.4",
    "chromadb>=0.5",
    "cus-core @ git+https://github.com/StellarRequiem/cus-core.git",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/StellarRequiem/buddy"
Repository = "https://github.com/StellarRequiem/buddy"
Issues = "https://github.com/StellarRequiem/buddy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["buddy"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["buddy"]
omit = ["buddy/ui/*", "buddy/__init__.py", "buddy/api/__init__.py",
         "buddy/llm/__init__.py", "buddy/memory/__init__.py", "buddy/tools/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]   # line length handled by formatter

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
